--- a/Sucessomensagem.html
+++ b/Sucessomensagem.html
@@ -1,60 +1,146 @@
+<!DOCTYPE html="pt-BR">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #fff;
-            color: #0e0d0d;
-        }
+    <meta charset="UTF-8"> <!-- Permitir utilizar caracter especial como 'ç'-->
+    <title>Roma</title>
 
-        .navbar {
-            background-color: #faf8f8;
-            input-security: .375rem;
-            input-security: .75rem; 
-        }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css"> <!-- Precisa existir a comunicação entre o arquivo CSS -->
 
-        .navbar-brand {
-            color: #fff;
-            font-weight: bold;
-        }
 
-        .navbar-brand:hover {
-            color: #dd0012;
-        }
 
-        .btn-pink {
-            background-color: #ee3000;
-            color: #fff;
-        }
-
-        .btn-pink:hover {
-            background-color: #41e44f;
-        }
-
-        .btn-yellow {
-            background-color: #1234f7;
-            color: #fff;
-        }
-
-        .btn-yellow:hover {
-            background-color: #41e649;
-        }
-
-        .footer {
-            background-color: #1404e9;
-            color: rgb(56, 16, 16);
-            padding: 20px 0;
-        }
-    </style>
 </head>
 
-<!--Sucesso Mensagem-->
-<div class="alert alert-success" role="alert">
-    <h4 class="alert-heading">Sucesso!</h4>
-    <p>Aguardo seu email em breve.</p>
-    <hr>
-    <p class="mb-0">Sempre que precisar, certifique-se de usar utilitários de margem para manter as coisas organizadas.
-    </p>
+
+
+<body>
+    <header>
+        <!-- Início do menu -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-re bg-red">
+                    <img src="IMG/VALE IMOBILIÁ.png" alt="" width="200" height="180">
+                </nav>
+                <a class="navbar-brand" href="Intex.html">Vale Imobilária</a>
+                <!--Button-->
+                <!-- Button para alternar o menu em dispositivos móveis -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                QUEM SOMOS
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
+                            </ul>
+                        </li>
+                        <!-- Outros menus de navegação -->
+                        <!-- Button para alternar o menu em dispositivos móveis -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        IMÓVEIS À VENDA
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                        <li><a class="dropdown-item" href="TODOSIMOVEIS.HTML">TODOS</a></li>
+                                        <li><a class="dropdown-item" href="LANCAMENTO.HTML">LANÇAMENTO</a></li>
+                                        <li><a class="dropdown-item" href="CONSTRUCAO.HTML">CONSTRUÇÃO
+                                        </li>
+                                        <li><a class="dropdown-item" href="ENTREGUE.HTML">ENTREGUE
+                                        </li>
+                                    </ul>
+                                </li>
+
+                                <!-- Button para alternar o menu em dispositivos móveis -->
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                                    aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+
+                                <div class="collapse navbar-collapse" id="navbarNav">
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1"
+                                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                EMPREENDIMENTOS
+                                            </a>
+                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                                <li><a class="dropdown-item" href="TODOSEMPREE.HTML">TODOS</a></li>
+                                                <li><a class="dropdown-item" href="COMERCIAL.HTML">COMERCIAL</a></li>
+                                                <li><a class="dropdown-item" href="RESIDENCIAL.HTML">RESIDENCIAL
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <!-- Button para alternar o menu em dispositivos móveis -->
+                                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                                            aria-label="Toggle navigation">
+                                            <span class="navbar-toggler-icon"></span>
+                                        </button>
+
+                                        <div class="collapse navbar-collapse" id="navbarNav">
+                                            <ul class="navbar-nav">
+                                                <li class="nav-item dropdown">
+                                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1"
+                                                        role="button" data-bs-toggle="dropdown"
+                                                        aria-expanded="false">CONTATO</a>
+                                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                                        <li><a class="dropdown-item" href="CONTATO.HTML">ENTRE EM
+                                                                CONTATO</a></li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </ul>
+                                </div>
+                            </ul>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+        </nav> <!-- Fim do menu -->
+    </header>
+
+
+    <main>
+
+        <!--Sucesso Mensagem-->
+        <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading">Sucesso!</h4>
+            <p>Aguardo seu email em breve.</p>
+            <hr>
+            <p class="mb-0">Sempre que precisar, certifique-se de usar utilitários de margem para manter as coisas
+                organizadas.</p>
+        </div>
+
+    </main>
+
+    <footer>
+
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
+
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
