--- a/CONTATO.HTML
+++ b/CONTATO.HTML
@@ -121,23 +121,26 @@
 
     <main>
 
-        <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">Nunca compartilharemos seu e-mail com mais ninguém.</div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Confira-me</label>
-            </div>
-            <a href="Sucessomensagem.html" class="btn btn-primary" role="button" aria-pressed="true">Enviar</a>
-            <a href="Cadastro.html" class="btn btn-primary" role="button" aria-pressed="true">Cadastro</a>
-          </form>
+        <div class="container">
+            <form>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Nunca compartilharemos seu e-mail com mais ninguém.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Confira-me</label>
+                </div>
+                <a href="Sucessomensagem.html" class="btn btn-primary" role="button" aria-pressed="true">Enviar</a>
+                <a href="Cadastro.html" class="btn btn-primary" role="button" aria-pressed="true">Cadastro</a>
+            </form>
+        </div>
+
 
     </main>
 
